--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html><head>
 <title> put your webpage title here </title>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8">
+  <style>
+    {body color: green;}
+  </style>
+  
 </head>
 <body>
+  
 put your webpage’s content here
   
   <p>
