--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         
         <img id="side" src="images/side.jpg" alt="Sorry. we are having trouble loading the image." height="1352" width="100" align=left align=top>
         <ul id="topselector">
-            <li class="selectorli"><img id="search" src="images/search.jpg" alt="Sorry. we are having trouble loading the image." height="20" width="20" align=left align=top></li>
+            <li class="selectorli"><img id="search" src="images/search.jpg" alt="Sorry. we are having trouble loading the image." height="20" width="20"></li>
             <li class="selectorli1">Search</li>
         </ul>
         
