--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
                 <li style="float: left;">Subscriptions</li>
             </ul>
         </div>
+          <p>
+    <a href="http://validator.w3.org/check?uri=referer"><img
+      src="http://www.w3.org/Icons/valid-html40" alt="Valid HTML 4.0 Transitional" height="31" width="88"></a>
+  </p>
         
     </body>
 </html>
