--- a/index.html
+++ b/index.html
@@ -64,13 +64,10 @@
                 <li class="bottomli"><a href="mailto:im2355a@student.american.edu" target="_top" class="greylink">Site Feedback</a></li>
                 <li class="bottomli">|</li>
                 <li style="float: left;">Subscriptions</li>
+                <li class="bottomli">|</li>
+                <li style="float: left;"><a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-html40" alt="Valid HTML 4.0 Transitional" height="31" width="88"></a></li>
             </ul>
         </div>
-          <p>
-    <a href="http://validator.w3.org/check?uri=referer"><img
-      src="http://www.w3.org/Icons/valid-html40" alt="Valid HTML 4.0 Transitional" height="31" width="88"></a>
-  </p>
-        
     </body>
 </html>
 
