--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
        
         
         <ul class="storys">
-            <li><a href="scanstory.html"><img id="SCANplanning" src="images/SCANplanning.jpg" alt="Sorry. we are having trouble loading the image." height="100" width="150"></a></li>
+            <li><a href="scanstory.html"><img id="SCANplanning" src="images/SCANPlanning.jpg" alt="Sorry. we are having trouble loading the image." height="100" width="150"></a></li>
             <li class="linklisthead" ><a href="scanstory.html" class="boldlink">Students Turn Their Classrooms into Haunted House</a></li>
             <li class="linklistblurb" style="font-size: 13px; padding left: 20px;"><a href="scanstory.html" class="darkgreylink">The Society of Physics Students is collaborating with other science departments and clubs at American University to put on its annual haunted house this Friday at the Sports Center Annex.</a></li>
             </ul>
