--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     
     <head>
-        <meta charset="utf-8">
+        <meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8">
             <title>The MacMillan Times</title>
             
             <script src="https://use.typekit.net/jif3mpy.js"></script>
