--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8">
             <title>The MacMillan Times</title>
             
-            <script src="https://use.typekit.net/jif3mpy.js"></script>
-            <script>try{Typekit.load({ async: true });}catch(e){}</script>
+            <script type="text/css" src="https://use.typekit.net/jif3mpy.js"></script>
+            <script type="text/css">try{Typekit.load({ async: true });}catch(e){}</script>
         
             <link rel="stylesheet" type="text/css" href="macmillantimesstyle.css">
 
