--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <li class="bottomli">|</li>
                 <li style="float: left;">Subscriptions </li>
                 <li class="bottomli">|</li>
-                <li style="float: left;"><a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-html40" alt="Valid HTML 4.0 Transitional" height="15.5" width="44"></a></li>
+                <li style="float: left;"><a href="http://validator.w3.org/check?uri=https%3A%2F%2Fimachd.github.io%2FCs280%2F"><img src="http://www.w3.org/Icons/valid-html40" alt="Valid HTML 4.0 Transitional" height="15.5" width="44"></a></li>
             </ul>
         </div>
     </body>
