--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <b>This text is bold</b>
         
         
-        <p><a href="cnn.com" class="boldlink">LINK to doc I created</a></p>
+        <p><a href="Document5.pdf" class="boldlink">LINK to doc I created</a></p>
         <table border="1">
 <tr>
 <td style="color:green;"><a href="nbc.com" class="boldlink">LINK</a></td>
