--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <b>This text is bold</b>
         
         
-        <p><a href="Document5.pdf" class="boldlink">LINK to doc I created</a></p>
+        <p><a href="Document5.pdf">LINK to doc I created</a></p>
         <table border="1">
 <tr>
-<td style="color:green;"><a href="nbc.com" class="boldlink">LINK</a></td>
-<td><a href="cnn.com" class="boldlink">LINK 2</a></td>
+<td style="color:green;"><a href="nbc.com">LINK</a></td>
+<td><a href="cnn.com">LINK 2</a></td>
 </tr>
 <tr>
 <td style="color:green;" >stuff</td>
