--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <b>This text is bold</b>
         
         
-        <p><a href="Document5.pdf">LINK to doc I created</a></p>
+        <p><a href="scanstory.html">LINK local thing</a></p>
         <table border="1">
 <tr>
 <td style="color:green;"><a href="nbc.com">LINK</a></td>
