--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <p><a href="scanstory.html">LINK local thing</a></p>
         <table border="1">
 <tr>
-<td style="color:green;"><a href="nbc.com">LINK</a></td>
-<td><a href="cnn.com">LINK 2</a></td>
+<td style="color:green;"><a href="https://nbc.com">LINK</a></td>
+<td><a href="https://cnn.com">LINK 2</a></td>
 </tr>
 <tr>
 <td style="color:green;" >stuff</td>
