--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <table border="1">
 <tr>
 <td style="color:green;"><a href="https://nbc.com">LINK</a></td>
-<td><a href="https://cnn.com">LINK 2</a></td>
+<td><a href="https://google.com">LINK 2</a></td>
 </tr>
 <tr>
 <td style="color:green;" >stuff</td>
